@@ -23,7 +23,7 @@ public class CreateInfo {
                 String name = field.substring(0, colonPos).trim();
                 String value = field.substring(colonPos+1).trim();
                 switch(name) {
-                    case "species": speciesTypeKey = SpeciesType.parse(value); break;
+                    case "species": speciesTypeKey = Manager.getSpeciesMappings().get(value); break;
                     case "mapKey": mapKey = Integer.parseInt(value); break;
                     case "toDir": toDir = value; break;
                     case "compress": compress = (value.equals("yes") ? true : false); break;
